IaC/K8S/nginx/deploy-conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx
              readOnly: true
  volumes:
    - name: nginx-conf
      configMap:
        name: nginx-conf
        items:
          - key: nginx.conf
            path: nginx.conf
nodeSelector:
  team: frontend
