IaC/K8S/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancing
  labels:
    env: prod
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
