IaC/K8S/nginx/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
    - host: ip.nip.io
      http:
        paths: 
          - backend:
              serviceName: nginx-loadbalancing
              servicePort: 80
